Add control to use If-Range header for range request.

Currently If-Range is used in all half opened request, including normal
download resumption, and parallel download subsequent requests.

However parallel download subsequent requests may not necessarily use
If-Range header.

This CL adds a parameter to control if If-Range is sent in the request.

Also refactored the code to attach partial request headers.

BUG=706181, 644352

Review-Url: https://codereview.chromium.org/2786523002
Cr-Commit-Position: refs/heads/master@{#460930}

Former-commit-id: b791e0b97910713700bf8e4f3396521cff290d3b